--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,13 +3,15 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 200px;
 }
 
 
 /* common shared styles */
 
 body{
-    /* font-family: 'Open Sans', sans-serif; */
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .nav-title{
@@ -36,15 +38,31 @@ nav a{
     text-decoration: none;
     color: #474747;
 }
+
 .btn-primary{
-    border-radius: 5px;
+border-radius: 5px;
 background: #FD6E0A;
 border: 0;
 color: white;
-font-family: Open Sans;
 font-size: 20px;
 font-style: normal;
-font-weight: 700;
-line-height: normal;
+/* font-weight: 700; */
+/* line-height: normal; */
 padding: 15px 35px;
 }
+
+
+/* header related styles */
+.header{
+    background: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .profile-picture{
+    width: 400px;
+}
+
