--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,7 +5,7 @@ nav{
     justify-content: space-between;
     margin: 0 200px;
 }
-
+    
 
 /* common shared styles */
 
@@ -23,6 +23,7 @@ body{
     font-weight: 800;
     line-height: normal;
 }
+
 .text-primary{
     color: #FD6E0A;
 }
@@ -55,14 +56,83 @@ padding: 15px 35px;
 /* header related styles */
 .header{
     background: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: 40%;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .banner .profile-picture{
-    width: 400px;
+    width: 350px;
 }
 
+.banner-greeting{   
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-description{
+color: #757575;
+font-size: 18px;
+margin-top: 20px;
+max-width: 650px;
+}
+
+/* .banner-content{ */
+max-width: 500px;
+}
+
+
+
+/* main section styles */
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+
+/* about section styles */
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+
+
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description{
+     color: #757575;
+        text-align: center;
+     font-size: 18px;
+      font-weight: 400;
+} 
+
+
+
+ 
+
+  
