--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -59,7 +59,7 @@ padding: 15px 35px;
     background-image: url(../images/header_bg.png);
     background-repeat: no-repeat;
     background-position: bottom right;
-    background-size: 40%;
+    background-size: 30%;
 }
 .banner{
     padding: 30px 30px 0px 150px;
@@ -92,20 +92,14 @@ margin-top: 20px;
 max-width: 650px;
 }
 
-/* .banner-content{ */
-max-width: 500px;
-}
+.banner-content{
+    max-width: 1000px;
+    }
 
 
 
 /* main section styles */
 
-.about{
-    padding: 130px;
-    border-radius: 10px;
-    background: #FFF8F3;
-    margin: 130px 0;
-}
 
 /* about section styles */
 
@@ -116,6 +110,10 @@ max-width: 500px;
     margin: 130px 0;
 }
 
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 .section-title{
     color: #181818;
@@ -125,14 +123,30 @@ max-width: 500px;
 }
 
 .section-description{
-     color: #757575;
-        text-align: center;
-     font-size: 18px;
-      font-weight: 400;
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
 } 
 
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
 
+.about-info{
+    text-align: center;
+}
 
- 
+.info-description{
+    color:#474747;
+    font-size: 20px;
+    font-weight: 700;
+}
 
-  
+.info-title{
+    color: #757575;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+}
