--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -207,24 +207,56 @@ main section {
     margin-bottom: 20px;
     margin-top: 0;
 
-.resume-item-title {
-    color: #474747;
-    font-size: 25px;
-    font-weight: 700;
-}
+    .resume-item-title {
+        color: #474747;
+        font-size: 25px;
+        font-weight: 700;
+    }
 
-.resume-column-title{
-    color: #474747;
-    font-size: 30px;
-    font-weight: 700;
-    margin-bottom: 10px;
-}
+    .resume-column-title {
+        color: #474747;
+        font-size: 30px;
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
 
-.resume-container hr{
-    margin: 30px;
-}
+    .resume-container hr {
+        margin: 30px;
+    }
 
-.download-cv{
-    text-align: center;
-    margin-top: 50px;
-}
+    .download-cv {
+        text-align: center;
+        margin-top: 50px;
+    }
+
+
+    /* footer styles */
+
+    footer {
+        display: flex;
+        gap: 100px;
+        background: #FFF8F3;
+        padding: 130px 200px;
+        margin-top: 100px;
+    }
+
+    .footer-column {
+        width: 50%;
+    }
+
+    .social-links a{
+        margin-right: 25px;
+    }
+
+    .contact input[type="text"], .contact input[type="email"],
+    textarea {
+        display: block;
+        margin-bottom: 25px;
+        padding: 18px 35px;
+        color: #757575;
+        border-radius: 5px;
+        background: #FFF;
+        border: 0;
+        width: 100%;
+
+    }
